Homepage carousel banner fix for mobile and tablet, center aligned Check Device and Coverage Check buttons, fix for Mobile nav link color in mobile nav

--- a/Website/frontend/assets/css/_sass/partials/_carousel.scss
+++ b/Website/frontend/assets/css/_sass/partials/_carousel.scss
@@ -9,6 +9,15 @@
     .wrapper {
         height: 420px;
         text-align: left;
+
+        @include breakpoint(small) {
+            height: 150px;
+        }
+
+        @include breakpoint(medium) {
+            height: 330px;
+        }
+
         .content {
             width: 50%;
             em {
@@ -64,6 +73,7 @@
         position: relative;
         background-size: cover;
         background-position: 50%;
+        background-repeat: no-repeat;
         @include transition(.6s ease-in-out left);
 
         // WebKit CSS3 transforms for supported devices
